fix: modify social element behavior for smaller screen
Displays social element vertically to avoid overlap with page test.
Remove hide of social ement with scrolling

--- a/src/components/molecules/socials/styles.css
+++ b/src/components/molecules/socials/styles.css
@@ -1,5 +1,4 @@
 .social-container {
-    padding: 10px;
     background: transparent;
     position: fixed;
     bottom: 0;
@@ -9,6 +8,7 @@ a.social {
     margin: 0 1rem;
     transition: transform 250ms;
     display: inline-block;
+    padding-bottom: 20px;
 }
 
 a.social:hover {
@@ -27,8 +27,15 @@ a.telegram {
     color: #2AABEE;
 }
 
+@media (max-width: 1488.98px) {
+    .social-container {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 @media (max-width: 767.98px) {
-    .aaa {
+    .social-div {
         display: none;
     }
 }
